# HeymanDex-AmazingHand

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  REQUIREMENTS.md  amazing_hand_audio.py  amazing_hand_camera.py  amazing_hand_cmd.py  amazing_hand_gui.py  amazing_hand_qt.py  amazing_hand_web.py  hand_logic.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
audio_samples/: .gitignore  README.md
data/: CONFIG_FORMAT.md  config.yaml  hand_config.yaml
docs/: CONFIG_FORMAT.md  RE100-上位机滑块模式.html  RE50-按钮面板.html  REQUIREMENTS.md  scs_servo_protocol.md  user_manual.md
docs/superpowers/plans/: 2026-06-10-voice-control.md
docs/superpowers/specs/: 2026-06-10-voice-control-design.md
src/amazing_hand/: __init__.py  amazing_hand_audio.py  amazing_hand_camera.py  amazing_hand_cmd.py  amazing_hand_gui.py  amazing_hand_qt.py  amazing_hand_web.py  hand_logic.py
tests/: conftest.py  test_audio.py  test_audio_files.py  test_camera.py  test_cmd.py  test_cmd_hardware.py  test_gui_utils.py  test_hand_logic.py  test_integration.py  test_system.py  test_system_hardware.py  test_web.py
tests/fixtures/audio_samples/: README.md
web/: index.html
