[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amazing-hand-gui"
version = "0.8.0"
description = "Multimodal control toolbox extending the Pollen Robotics AmazingHand — voice, camera, GUI, CLI, web, Qt"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "rustypot",
]

[project.optional-dependencies]
audio = ["vosk", "sounddevice", "pynput", "soundfile"]
camera = ["mediapipe", "opencv-python"]
qt = ["PyQt6"]
web = []
all = [
    "vosk", "sounddevice", "pynput", "soundfile",
    "mediapipe", "opencv-python",
    "PyQt6",
]

[project.scripts]
amazing-hand-gui = "amazing_hand.amazing_hand_gui:main"
amazing-hand-cmd = "amazing_hand.amazing_hand_cmd:main"

[project.urls]
Homepage = "https://github.com/Gogo1206/HeymanDex-AmazingHand"
"Bug Tracker" = "https://github.com/Gogo1206/HeymanDex-AmazingHand/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "hardware: tests requiring real servo hardware (run with --hardware)",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["amazing_hand*"]
